--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>重定向到 Minecraft 服务器监测平台</title>
     <script>
-        // 立即重定向到 public/index.html
-        window.location.href = 'public/index.html';
+        // 立即重定向到 dist/index.html
+        window.location.href = 'dist/index.html';
     </script>
     <noscript>
-        <meta http-equiv="refresh" content="0; url=public/index.html">
+        <meta http-equiv="refresh" content="0; url=distc/index.html">
     </noscript>
 </head>
 <body>
     <h1>正在重定向到 Minecraft 服务器监测平台...</h1>
-    <p>如果您的浏览器没有自动重定向，请 <a href="public/index.html">点击这里</a>。</p>
+    <p>如果您的浏览器没有自动重定向，请 <a href="dist/index.html">点击这里</a>。</p>
 </body>
 </html>
