--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
     <div class="user-info">
       <img id="user-avatar" class="avatar" src="" alt="用户头像">
       <div>
-        <h1 class="username" id="username">508364</h1>
+        <h1 class="username" id="username"><a href="https://github.com/508364" >508364</a></h1>
         <p class="bio" id="bio">GitHub个人项目集</p>
       </div>
     </div>
     <button id="theme-switch" class="theme-switch" title="切换主题">
+      
       <svg class="icon" viewBox="0 0 24 24" width="20" height="20">
         <path id="theme-icon" d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M12,20.5 L12,3.5 C16.6944204,3.5 20.5,7.30557963 20.5,12 C20.5,16.6944204 16.6944204,20.5 12,20.5 Z"/>
       </svg>
@@ -310,7 +311,7 @@
   </main>
 
   <footer>
-    <p>© 2023 <span id="user-profile-name"></span> 的 GitHub 主页</p>
+    <p>© 2025 <span id="user-profile-name"></span> 的 GitHub 主页</p>
   </footer>
 
   <script>
