--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     <div class="user-info">
       <img id="user-avatar" class="avatar" src="" alt="用户头像">
       <div>
-        <h1 class="username" id="username"><a href="https://github.com/508364" >508364</a></h1>
-        <p class="bio" id="bio">GitHub个人项目集</p>
+        <h1 class="username" id="username">508364</h1>
+        <p class="bio" id="bio"><a href="https://github.com/508364">GitHub个人项目集</a></p>
       </div>
     </div>
     <button id="theme-switch" class="theme-switch" title="切换主题">
