--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div class="user-info">
       <img id="user-avatar" class="avatar" src="" alt="用户头像">
       <div>
-        <h1 class="username" id="username">508364</h1>
+        <h1 class="username" id="username"><span id="user-profile-name"></span></h1>
         <p class="bio" id="bio"><a href="https://github.com/508364">GitHub个人项目集</a></p>
       </div>
     </div>
