--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
   </main>
 
   <footer>
-    <h4 class="username" id="username">© 2025<span id="user-profile-name">的 GitHub 主页</span></h4>
-    <p>© 2025<span id="user-profile-name"></span>的 GitHub 主页</p>
+    <p>© 2025<span id="user-profile-name"></span>508364 的 GitHub 主页</p>
   </footer>
 
   <script>
