--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   </main>
 
   <footer>
-    <p>© 2025<span id="user-profile-name"></span>508364 的 GitHub 主页</p>
+    <p>© 2025 508364 的 GitHub 主页</p>
   </footer>
 
   <script>
