--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title id="page-title">GitHub主页</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/custom-styles.css">
+  <link rel="stylesheet" href="js/data-cache.js">
   <style>
     :root {
       /* 浅色主题变量 */
@@ -1022,5 +1023,6 @@
   </script>
 </body>
 </html>
+
 
 
