--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>508364's GitHub Projects</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
     <style>
         :root {
             --bg-color: #ffffff;
@@ -510,3 +511,4 @@
     </script>
 </body>
 </html>
+
