--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>508364's GitHub Projects</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
+    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
     <style>
         :root {
             --bg-color: #ffffff;
@@ -511,4 +511,5 @@
     </script>
 </body>
 </html>
+
 
